# p2pCryptoBot

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .safety-project.ini  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  PRICING.md  PROJECT_STATE.md  README.md  WHITELABEL_PLAN.md  branding.yaml.example  build_package.sh  coverage_dashboard.html  docker-compose.yml  init_db.py  migrate.sh  pyproject.toml  requirements.txt  run_tests.ps1  setup.sh  temp_reqs.txt  test.bat  test.sh  test_out.txt
.agents/rules/: p2pbot.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
api/: main.py
bot/: config.py  dynamic_loader.py  i18n.py  keyboards.py  main.py  middleware.py  schemas.py  states.py
bot/handlers/: __init__.py  admin.py  admin_sandbox.py  b2b.py  chat.py  dispute.py  escrow.py  marketplace.py  order.py  profile.py  settings.py  shop.py  stars_payment.py  start.py  trade.py  wallet.py  webhook.py
db/: __init__.py  engine.py
db/migrations/: env.py
db/migrations/versions/: 0001_initial.py  0002_maker_taker.py  0003_chat.py  0004_user_stats.py  0005_wallets.py  1d7012cf5860_add_anti_fraud_fields.py  4293063be26a_add_on_chain_escrow_to_orders.py  62c2515efea4_add_seller_id_to_marketplace_deals.py  6733b7c2dddf_add_promo_codes.py  7f157b80731b_add_image_urls_to_products.py  839fc6230995_add_inapp_notification.py  889c15d33bc5_add_marketplace_products.py  91e3ac3c7d34_add_product_promotion_fields.py  9e3d29343bd6_marketplace_expansion.py  a1b2c3d4e5f6_add_dispute_fields_to_marketplace_deals.py  b5fe4e0fcc5b_add_product_reviews.py  b9d88aed8b4d_add_marketplace_products.py  caade745ecb9_add_dispute_model.py  d0b86dfec9c3_add_on_chain_gas_buffer_to_order.py  d1e8ea476e1b_consolidated_state.py  d82da554c000_add_deal_id_to_chat.py  e4810f7ad583_add_b2b_licenses_and_ton_invoices.py  ed000d51edf5_add_adminauditlog_model.py  f90904ad1d60_marketplace_multichain.py
db/models/: __init__.py  admin.py  b2b.py  base.py  chat.py  marketplace.py  notification.py  order.py  product.py  user.py  wallet.py
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/: DisputeModal.tsx
frontend/src/components/layout/: AppLayout.tsx
frontend/src/lib/: tg.ts  utils.ts
frontend/src/pages/: AdminPanel.tsx  Catalog.tsx  Chat.tsx  Checkout.tsx  Deals.tsx  Notifications.tsx  ProductDetails.tsx  Profile.tsx  Search.tsx  Seller.tsx
frontend/src/store/: useAppStore.ts
locales/en/: messages.json
locales/ru/: messages.json
p2pbot.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
providers/: crypto_pay.py  fiat_rate_provider.py  rate_provider.py  ton.py  wallet_provider.py
providers/broker/: __init__.py  base.py  binance.py  bybit.py  okx.py
scripts/: check.ps1  check.sh  init_db.py
services/: admin_audit_service.py  admin_sandbox_service.py  admin_service.py  admin_user_service.py  b2b_service.py  balance_service.py  bot_spawner.py  chat_service.py  dispute_service.py  escrow_service.py  file_delivery.py  marketplace_dispute_service.py  marketplace_ecommerce.py  marketplace_notifications.py  marketplace_service.py  notification_service.py  order_service.py  rate_service.py  referral_service.py  shop_service.py  user_service.py  wallet_service.py
tasks/: __init__.py  cleanup.py  escrow_scanner.py  marketplace_scanner.py  payout_worker.py  ton_scanner.py
tests/: conftest.py  test_admin_sandbox.py  test_admin_service.py  test_b2b.py  test_b2b_service_extended.py  test_balance_service.py  test_balance_service_extended.py  test_bot_handlers_extended.py  test_bot_spawner.py  test_bot_spawner_extended.py  test_branding.py  test_branding_per_license.py  test_brokers.py  test_contract_binance.py  test_contract_cryptopay.py  test_contract_database.py  test_coverage_boost.py  test_coverage_final.py  test_db_engine.py  test_db_marketplace.py  test_handlers_admin.py  test_handlers_admin_sandbox.py  test_handlers_chat.py  test_handlers_dispute.py  test_handlers_escrow.py  test_handlers_extra.py  test_handlers_marketplace.py  test_handlers_order.py  test_handlers_profile.py  test_handlers_profile_extended.py  test_handlers_settings.py  test_handlers_stars_payment.py  test_handlers_start.py  test_handlers_start_extended.py  test_handlers_trade.py  test_hmac_helpers.py  test_i18n.py  test_keyboards.py  test_license_guard.py  test_main.py  (+46 more)
tests/unit/: test_multichain_providers.py
utils/: coverage_dashboard.py  datetime_helpers.py  encryption.py  formatters.py  hmac_helpers.py  license_guard.py
