[build-system]
requires = ["setuptools>=71", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "p2pbot"
version = "0.1.0"
description = "P2P crypto trading Telegram bot with escrow via Crypto Pay"
requires-python = ">=3.12"
dependencies = [
    # Telegram bot framework
    "aiogram>=3.27,<4",
    # Database — async runtime
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    # Database — Alembic sync migrations (psycopg2, NOT asyncpg)
    "alembic>=1.13",
    "psycopg2-binary>=2.9",
    # Crypto Pay (latest stable)
    "aiocryptopay==0.4.8",
    # Exchange adapters
    "ccxt>=4.0.3",
    # Structured logging
    "structlog>=24.0",
    # Encryption
    "cryptography>=42.0",
    # Web3 wallet key generation + EVM JSON-RPC client
    # eth-account is a transitive dep of web3 (version resolved automatically)
    "web3>=7.0,<8",
    "pytoniq-core>=0.1.36,<0.2",
    # Config / secrets
    "python-dotenv>=1.0",
    # Webhook HTTP server
    "aiohttp>=3.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "pytest-sugar>=1.0.0",
    "mypy>=1.10",
    "ruff>=0.4",
    "sqlalchemy[mypy]>=2.0",
    "types-aiofiles",
    "types-psycopg2",
    "aiohttp>=3.9",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM"]
ignore = ["ANN101", "ANN102", "ANN401"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["sqlalchemy.ext.mypy.plugin"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short --cov=bot --cov=services --cov=utils --cov=tasks --cov-report=term-missing:skip-covered"

[tool.coverage.run]
omit = ["tests/*", "db/migrations/*"]
