[build-system]
requires = ["setuptools>=71", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "p2pbot"
version = "0.1.0"
description = "P2P crypto trading Telegram bot with escrow via Crypto Pay"
requires-python = ">=3.12"
dependencies = [
    # Telegram bot framework
    "aiogram>=3.27,<4",
    # Database — async runtime
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    # Database — Alembic sync migrations (psycopg 3, NOT asyncpg)
    "alembic>=1.13",
    "psycopg[binary]>=3.1",
    # Crypto Pay: direct aiohttp calls — no SDK. See providers/crypto_pay.py.
    # aiocryptopay removed: it pinned certifi<2024 (CVE-2024-39689 unpatched).
    # Exchange adapters
    "ccxt>=4.0.3",
    # Structured logging
    "structlog>=25.4.0",
    # Encryption
    "cryptography>=48.0.0",
    # Web3 wallet key generation + EVM JSON-RPC client
    # eth-account is a transitive dep of web3 (version resolved automatically)
    "web3>=7.0,<8",
    "pytoniq>=0.1.36,<0.2",
    # Config / secrets
    "python-dotenv>=1.2.2",
    # Webhook HTTP server
    "aiohttp>=3.13.5",
    "pyyaml>=6.0",
    "google-generativeai>=0.7.0",
    "defusedxml>=0.7.1",
    # certifi: unrestricted now that aiocryptopay is removed (CVE-2024-39689 patched)
    "certifi>=2026.4.22",
    # protobuf: 5.29.6 is max version compatible with google-generativeai (requires <6.0.0)
    # CVE-2024-51547 is patched in >=5.29.6. Cannot upgrade to 7.x — google-api-core blocks it.
    "protobuf>=5.29.6,<6.0.0",
    # Multi-language support
    "aiogram-i18n>=1.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "pytest-sugar>=1.0.0",
    "pytest-github-actions-annotate-failures",
    "mypy>=1.10",
    "ruff>=0.4",
    "sqlalchemy[mypy]>=2.0",
    "types-aiofiles",
    "types-PyYAML",
    # Security scanning tools
    "bandit[toml]>=1.7.8",
    "pip-audit>=2.7.0,<2.10.0",
    "semgrep>=1.60.0",
]

[tool.setuptools]
# Явно указываем все директории, которые являются пакетами
packages = ["bot", "db", "services", "providers", "tasks", "utils"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM"]
ignore = ["ANN401"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["sqlalchemy.ext.mypy.plugin"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short --cov=bot --cov=services --cov=providers --cov=utils --cov=tasks --cov=db --cov-report=term-missing:skip-covered"
markers = [
    "unit: fast, pure-logic tests with no external dependencies (no DB, no API)",
    "contract: tests that validate API response contracts using mocks",
    "integration: tests that require a live PostgreSQL database",
]

[tool.bandit]
exclude_dirs = ["tests", "db/migrations"]
skips = []

[tool.coverage.run]
omit = ["tests/*", "db/migrations/*", "utils/coverage_dashboard.py"]
